cabal-version:      2.4
name:               nexus-mods
version:            0.1.0.0
author:             Nicholas Coltharp
maintainer:         coltharp@pdx.edu

library
    exposed-modules:    NexusMods
    other-modules:      NexusMods.TH
    build-depends:      base
                      , aeson
                      , containers
                      , http-api-data
                      , http-client
                      , http-client-tls
                      , servant
                      , servant-client
                      , sop-core
                      , text
                      , time
                      , unordered-containers
    hs-source-dirs:     src
    default-language:   Haskell2010
    default-extensions: BlockArguments
                      , DataKinds
                      , DeriveGeneric
                      , DuplicateRecordFields
                      , FlexibleInstances
                      , GADTs
                      , ImportQualifiedPost
                      , LambdaCase
                      , MultiWayIf
                      , OverloadedStrings
                      , TemplateHaskell
                      , TypeApplications
                      , TypeOperators
    ghc-options:        -Wall
                        -Wno-name-shadowing