cabal-version:      2.4
name:               nexus-mods
version:            0.1.0.0
author:             Nicholas Coltharp
maintainer:         coltharp@pdx.edu

library
    exposed-modules:    NexusMods
    other-modules:      NexusMods.Indexed
                      , NexusMods.TH
                      , NexusMods.Surgery
    build-depends:      base
                      , aeson
                      , containers
                      , generic-data-surgery
                      , http-api-data
                      , http-client
                      , http-client-tls
                      , indexed
                      , indexed-extras
                      , servant
                      , servant-client
                      , sop-core
                      , text
                      , time
                      , unordered-containers
    hs-source-dirs:     src
    default-language:   Haskell2010
    default-extensions: AllowAmbiguousTypes
                      , BlockArguments
                      , DataKinds
                      , DeriveGeneric
                      , DuplicateRecordFields
                      , FlexibleContexts
                      , FlexibleInstances
                      , GADTs
                      , ImportQualifiedPost
                      , LambdaCase
                      , MultiWayIf
                      , OverloadedStrings
                      , QualifiedDo
                      , ScopedTypeVariables
                      , TemplateHaskell
                      , TypeApplications
                      , TypeOperators
    ghc-options:        -Wall
                        -Wno-name-shadowing