cabal-version:      2.4
name:               nexus-mods
version:            0.1.0.0
author:             Nicholas Coltharp
maintainer:         coltharp@pdx.edu

source-repository head
    type:     git
    location: https://github.com/nosewings/nexus-mods.git

library
    exposed-modules:    NexusMods
                      , NexusMods.Internal
                      , NexusMods.Internal.Indexed
                      , NexusMods.Internal.TH
                      , NexusMods.Internal.Surgery
    build-depends:      base >=4.15.1.0
                      , aeson >=1.5.5.1
                      , containers >=0.6.4.1
                      , generic-data-surgery >=0.1.0.0
                      , http-api-data >=0.4.3
                      , http-client >=0.5.13.1
                      , http-client-tls >=0.3.0
                      , indexed >=0.1.1
                      , indexed-extras >=0.2
                      , servant >=0.18.3
                      , servant-client >=0.18.3
                      , servant-flatten >=0.1
                      , sop-core >=0.5.0.1
                      , text >=1.2.5.0
                      , time >=1.9.3
                      , unordered-containers >=0.2.10.0
    hs-source-dirs:     src
    default-language:   Haskell2010
    default-extensions: AllowAmbiguousTypes
                      , BlockArguments
                      , DataKinds
                      , DeriveGeneric
                      , DuplicateRecordFields
                      , FlexibleContexts
                      , FlexibleInstances
                      , GADTs
                      , ImportQualifiedPost
                      , LambdaCase
                      , MultiWayIf
                      , NoMonomorphismRestriction
                      , OverloadedStrings
                      , QualifiedDo
                      , ScopedTypeVariables
                      , TemplateHaskell
                      , TypeApplications
                      , TypeOperators
                      , ViewPatterns
    ghc-options:        -Weverything
                        -Wno-all-missed-specialisations
                        -Wno-implicit-prelude
                        -Wno-missing-deriving-strategies
                        -Wno-missing-local-signatures
                        -Wno-missing-import-lists
                        -Wno-missing-safe-haskell-mode
                        -Wno-name-shadowing
                        -Wno-unsafe
